# cuda_microbenchmark

./: 1_L2.cu  1_L2_cp_async.cu  1_L2_loadd2stored1.cu  1_L2_loadonly.cu  1_L2_vec.cu  2_exp_fmul.cu  2_exp_fmul_allpeak.cu  3_load_fp8.cu  CMakeLists.txt  Makefile  README.md  analysis_A100.md  analysis_H100.md  analysis_RTX4090.md
utils/: do_bench.cuh
